--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,10 @@
   font-family: ball2;
   src: url(../font/a발레리노.woff);
 }
+@font-face {
+  font-family: swgi1;
+  src: url(../font/a시월구일1.woff);
+}
 /* 파크 티켓 전체 박스 설정 */
 #wrap {
   width: 80%;
@@ -152,10 +156,10 @@ section.class--ticket ul {
   margin-top: 40px;
 }
 section.class--ticket ul li a {
-  font-size: 20px;
+  font-size: 25px;
   width: 300px;
   height: 50px;
-  background-color: #ffd662;
+  border: 1px solid #666;
   text-align: center;
   line-height: 50px;
   border-radius: 10px;
@@ -212,7 +216,7 @@ section.class--ticket .timetable tr td
 
 /* 버튼 클릭 효과 */
 
-.is_on .btn{font-weight: bold; background-color: #F9A836; box-shadow: 5px 5px 5px inset #333, 5px 5px 5px #333; margin-bottom: 30px;}
+.is_on .btn{font-weight: bold; background-color: #ffd662; box-shadow: 2px 2px 2px inset #333, 3px 3px 2px #333; margin-bottom: 30px;}
 
 /* 티켓 종류에 따른 파크 티켓가격 버튼 클릭시 팝업 */
 
